--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "url": "https://github.com/Quicksign/quicksign.github.io/issues"
   },
   "dependencies": {
+    "browserify": "^16.2.3",
+    "child_process": "^1.0.2",
+    "fs": "0.0.1-security",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
+    "gulp-browserify": "^0.5.1",
     "gulp-clean": "^0.4.0",
     "gulp-connect": "^5.6.1",
     "gulp-install": "^1.1.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-require-modules": "^1.1.2",
     "gulp-sass": "^4.0.1",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-watch": "^5.0.1"
+    "yargs": "^12.0.2"
   },
   "devDependencies": {
     "material-kit": "^2.0.4"
