update travisci conf with target master branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ deploy:
   github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as an environment variable
   keep-history: false
   local-dir: dist/
+  target-branch: master
   on:
-    branch: master
+    branch: develop
