--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-rename": "^1.4.0",
     "gulp-require-modules": "^1.1.2",
     "gulp-sass": "^4.0.1",
+    "uglify-js": "^2.6.0",
     "yargs": "^12.0.2"
   },
   "devDependencies": {
