deploying dev website to quicksign/dev repo -> https://code.quicksign.io/dev/

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,19 @@ before_script:
 script:
   - gulp build
 deploy:
-  provider: pages
-  skip-cleanup: true
-  github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as an environment variable
-  keep-history: false
-  local-dir: dist/
-  target-branch: master
-  on:
-    branch: develop
+  - provider: pages
+    skip-cleanup: true
+    github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as an environment variable
+    keep-history: false
+    local-dir: dist/
+    repo: quicksign/dev
+    on:
+      branch: develop
+  - provider: pages
+    skip-cleanup: true
+    github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as an environment variable
+    keep-history: false
+    local-dir: dist/
+    target-branch: master
+    on:
+      branch: prod
